--- a/telemetry-dashboard/src/app/pages/events/events.component.html
+++ b/telemetry-dashboard/src/app/pages/events/events.component.html
@@ -26,7 +26,7 @@
 
         <span class="flex-1"></span>
 
-        <button mat-raised-button color="accent" (click)="exportCsv()">Export CSV</button>
+        <!-- <button mat-raised-button color="accent" (click)="exportCsv()">Export CSV</button>
 
         <span class="ml-3 text-sm" [ngClass]="{
             'text-emerald-600': status==='live',
@@ -34,7 +34,7 @@
             'text-rose-600': status==='offline'
           }">
             {{ status | titlecase }}
-        </span>
+        </span> -->
     </div>
 
     <!-- Table -->
